tests/errors/condition_loop_return_nonnull.dang
# A condition-based loop may skip its body, so a return inside the body
# cannot make the loop expression non-null.
bad: String! {
  for (false) {
    return "x"
  }
}
